(executable
 (name gal)
 (public_name gal)
 (modules gal app_embed)
 (libraries lwt opium multipart_form bos astring cmdliner)
 )

(executable
 (name app)
 (modules app)
 (libraries brr react reactiveData)
 (link_flags (:standard -no-check-prims))
 (modes js))

(executable
 (name embed)
 (modules embed)
 (libraries bos))

(rule
 (targets app_embed.ml)
 (deps app.bc.js embed.exe)
 (action (run ./embed.exe ./app.bc.js app_embed.ml)))
